--- a/App.xaml
+++ b/App.xaml
@@ -4,14 +4,17 @@
              xmlns:local="clr-namespace:EasySaveApp"
              xmlns:viewModel="clr-namespace:EasySaveApp.MVVM.ViewModel"
              xmlns:view="clr-namespace:EasySaveApp.MVVM.View"
-             StartupUri="MainWindow.xaml">
+             Startup="Application_Startup">
     
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Theme/MenuButtonTheme.xaml"/>
                 <ResourceDictionary Source="Theme/TextboxTheme.xaml"/>
+                <ResourceDictionary Source="Languages/StringResources_fr.xaml"/>
+                <ResourceDictionary Source="Languages/StringResources_en.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            
             <DataTemplate DataType="{x:Type viewModel:SaveHomeViewModel}">
                 <view:SaveHomeView/>
             </DataTemplate>
@@ -24,6 +27,7 @@
             <DataTemplate DataType="{x:Type viewModel:ProgressionViewModel}">
                 <view:ProgressionView/>
             </DataTemplate>
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application> 
