--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,7 +7,9 @@
         xmlns:local="clr-namespace:EasySaveApp"
         mc:Ignorable="d"
         Height="600" Width="920"
-        Background="Transparent">
+        Background="Transparent"
+        ResizeMode="NoResize"
+        >
 
     <Window.DataContext>
         <viewModel:MainViewModel/>
