--- a/MVVM/View/SettingView.xaml
+++ b/MVVM/View/SettingView.xaml
@@ -41,10 +41,9 @@
 
             <TextBlock Grid.Row="1" 
                        Grid.Column="0" 
-                       Text="List of extensions" 
                        FontSize="15"
                        Foreground="AliceBlue"
-                       VerticalAlignment="Center"/>
+                       VerticalAlignment="Center"><Run Text="E"/><Run Text="xtension to Crypt"/></TextBlock>
 
             <TextBlock Grid.Row="2"
                        Grid.Column="0"
